--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -468,7 +468,7 @@ To maximize result reproducibility, all the pretrained models and code were down
 
 \begin{figure}[ht]
 	\centering
-	\includegraphics[width=0.9\textwidth]{./images-bss/boxplot_full.pdf}
+	\includegraphics[width=\textwidth]{./images-bss/boxplot_full.pdf}
 	\caption{Boxplot of UMX, X-UMX, and xumx-sliCQ alongside the oracles}
 	\label{fig:bssboxplot}
 \end{figure}
