--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1449,7 +1449,7 @@ author={Fabian-Robert Stöter and Antoine Liutkus and Nobutaka Ito},
   publisher = {Springer International Publishing},
   year = {2018},
   volume = {10891},
-  booktitle = {Latent Variable Analysis and Signal Separation. LVA/ICA 2018. Lecture Notes in Computer Science},
+  booktitle = {Latent Variable Analysis and Signal Separation. Lecture Notes in Computer Science},
   doi = {10.1007/978-3-319-93764-9_28}
 }
 
