--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -816,7 +816,7 @@ All of the code for this thesis were stored in git repositories to keep track of
 
 Typical music recordings are mono or stereo mixtures, with multiple sound objects (drums, vocals, etc.) sharing the same track \parencite{musicsepintro1}. To manipulate the individual sound objects, the stereo audio mixture needs to be separated into a track for each different sound source, in a process called audio source separation.
 
-There are many motivations for performing this separation. \citeauthor{musicsepgood} describe that once we perform audio source separation and have access to the individual source tracks, we can ``remix the balance within the music [...] to make the vocals louder or to suppress an unwanted sound, or we might want to upmix a 2-channel stereo recording to a 5.1-channel surround sound system... We might also want to change the spatial location of a musical instrument within the mix'' \parencite[1]{musicsepgood}.
+There are many motivations for performing this separation. \citeauthor{musicsepgood} describe that once we perform audio source separation and have access to the individual source tracks, we can ``remix the balance within the music [...] to make the vocals louder or to suppress an unwanted sound, or we might want to upmix a 2-channel stereo recording to a 5.1-channel surround sound system... We might also want to change the spatial location of a musical instrument within the mix'' \parencite[31]{musicsepgood}.
 
 The ISMIR 2021 Music Demixing Challenge\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} (MDX) \parencite{mdx21} describes audio source separation as consisting of different subtasks, including ``music source separation systems [that] take a song as input and output one track for each of the instruments,'' and ``speech enhancement systems [that] take noisy speech as input and separate the speech content from the noise.'' The competition description mentions important uses for music demixing systems, ranging from entertainment to hearing aids:
 
@@ -847,7 +847,7 @@ Among the earliest computational approaches for blind source separation is Indep
 \begin{figure}[ht]
 	\centering
 	\includegraphics[height=8cm]{./images-mss/positional.png}
-	\caption{Position-based source separation \parencite[9]{musicsepgood}}
+	\caption{Position-based source separation \parencite[35]{musicsepgood}}
 \label{fig:icaposition}
 \end{figure}
 
@@ -857,25 +857,25 @@ According to \citeauthor{musicsepintro1}, ICA techniques arose more typically fo
 	[systems which aim] to recover clean speech from noisy recordings [...] can be seen as a particular instance of source separation. [...] many algorithms assume the audio background can be modeled as stationary. However, the musical sources are characterized by a very rich, nonstationary spectrotemporal structure. This prohibits the use of such methods. Musical sounds often exhibit highly synchronous evolution over both time and frequency, making overlap in both time and frequency very common. Furthermore, a typical commercial music mixture violates all the classical assumptions of ICA. Instruments are correlated (e.g., a chorus of singers), there are more instruments than channels in the mixture, and there are nonlinearities in the mixing process (e.g., dynamic range compression) \parencite[1]{musicsepintro1}.
 \end{quote}
 
-Techniques more specific to music were developed as a necessity to deal with these differences \parencite{musicseptechniques1, musicseptechniques2}. For cases where ICA cannot be applied, musical source models are more popular \parencite[11]{musicsepgood}, which are ``model-based approaches that attempt to capture the spectral characteristics of the target source can be used.'' Sources are assumed to be sufficiently different from each other, or sparse in their spectral representation \parencite{musicsepgood}, such that they can be extracted with time-frequency masks applied in the spectral domain. Figure \ref{fig:sepgood} shows how different sources have unique spectral patterns.
+Techniques more specific to music were developed as a necessity to deal with these differences \parencite{musicseptechniques1, musicseptechniques2}. For cases where ICA cannot be applied, musical source models are more popular, which are ``model-based approaches that attempt to capture the spectral characteristics of the target source can be used'' \parencite[36]{musicsepgood}. Sources are assumed to be sufficiently different from each other, or sparse in their spectral representation \parencite{musicsepgood}, such that they can be extracted with time-frequency masks applied in the spectral domain. Figure \ref{fig:sepgood} shows how different sources have unique spectral patterns.
 
 \begin{figure}[ht]
 	\centering
 	\subfloat[Mixed spectrogram]{\includegraphics[width=0.675\textwidth]{./images-mss/mss1.png}}\\
 	\subfloat[Source spectrograms]{\includegraphics[width=0.675\textwidth]{./images-mss/mss2.png}}
-	\caption{Sparsity of music sources in the spectral domain \parencite[1, 3]{musicsepgood}}
+	\caption{Sparsity of music sources in the spectral domain \parencite[32]{musicsepgood}}
 \label{fig:sepgood}
 \end{figure}
 
-Kernel Additive Modeling (KAM) is the simplest form of music source modeling \parencite{musicsepgood}. To estimate a music source at a given time-frequency point, KAM ``select[s] a set of time-frequency bins, which, given the nature of the target source, e.g., percussive, harmonic or vocals, are likely to be similar in value. This set of time-frequency bins is termed a proximity kernel'' \parencite[11]{musicsepgood}. A well-known example of a KAM-based music separation algorithm is the median-filtering Harmonic/percussive Source Separation (HPSS) algorithm \parencite{fitzgerald1}.
+Kernel Additive Modeling (KAM) is the simplest form of music source modeling \parencite{musicsepgood}. To estimate a music source at a given time-frequency point, KAM ``select[s] a set of time-frequency bins, which, given the nature of the target source, e.g., percussive, harmonic or vocals, are likely to be similar in value. This set of time-frequency bins is termed a proximity kernel'' \parencite[36]{musicsepgood}. A well-known example of a KAM-based music separation algorithm is the median-filtering Harmonic/percussive Source Separation (HPSS) algorithm \parencite{fitzgerald1}.
 
-Spectrogram factorization models are more sophisticated than KAM, and the most popular spectrogram factorization model is Nonnegative Matrix Factorization (NMF) \parencite{musicmask, musicsepgood}. According to \citeauthor{musicsepgood}, NMF ``attempts to factorize a given nonnegative matrix into two nonnegative matrices,'' and it can be applied to the magnitude spectrogram of the mix, $M$, to separate it into frequency weight matrices $W$ and time activation matrices $H$ \parencite[12]{musicsepgood}. A survey on NMF techniques by \textcite{nmfpaper} covers the algorithm in more detail. Most recently, data-driven approaches based on machine learning and deep learning have significantly surpassed past approaches \parencite{musicsepgood, sisec2018}. Figure \ref{fig:spectraldemix} shows different techniques for spectral demixing.
+Spectrogram factorization models are more sophisticated than KAM, and the most popular spectrogram factorization model is Nonnegative Matrix Factorization (NMF) \parencite{musicmask, musicsepgood}. According to \citeauthor{musicsepgood}, NMF ``attempts to factorize a given nonnegative matrix into two nonnegative matrices,'' and it can be applied to the magnitude spectrogram of the mix, $M$, to separate it into frequency weight matrices $W$ and time activation matrices $H$ \parencite[37]{musicsepgood}. A survey on NMF techniques by \textcite{nmfpaper} covers the algorithm in more detail. Most recently, data-driven approaches based on machine learning and deep learning have significantly surpassed past approaches \parencite{musicsepgood, sisec2018}. Figure \ref{fig:spectraldemix} shows different techniques for spectral demixing.
 
 \begin{figure}[ht]
 	\centering
 	\subfloat[KAM vs. NMF for spectral music demixing]{\includegraphics[width=0.9\textwidth]{./images-mss/kamvnmf.png}}\\
 	\subfloat[Deep neural networks for spectral music demixing]{\includegraphics[width=0.9\textwidth]{./images-mss/mssdnn.png}}
-	\caption{Techniques for spectral music demixing \parencite[12, 14]{musicsepgood}}
+	\caption{Techniques for spectral music demixing \parencite[36, 38]{musicsepgood}}
 	\label{fig:spectraldemix}
 \end{figure}
 
