Just a little tweaks

--- a/latex/proposal.tex
+++ b/latex/proposal.tex
@@ -36,7 +36,7 @@
 
 Music source separation, or music demixing, is the task of decomposing musical audio into its constituent sources, which are typically isolated instruments (e.g., drums, bass, and vocals). Music demixing algorithms commonly operate on the Short-Time Fourier Transform (STFT) of the audio signal \parencite{musicsepgood}. Due to the time-frequency uncertainty principle \parencite{gabor1946}, the STFT of a signal cannot be maximally precise in both time and frequency, and the tradeoff in time-frequency resolution can significantly affect music demixing results \parencite{tftradeoff1}. In this thesis, the sliCQT \parencite{slicq}, an STFT-like transform with varying time-frequency resolution, is explored as a replacement for the STFT in a state-of-the-art deep learning model for music demixing.
 
-The STFT is computed by applying the discrete Fourier Transform on fixed-size windows of the input signal. \textcite{doerflerphd} argues, based on auditory and musical considerations, that musical signals should be analyzed with long windows in the low-frequency regions to capture detailed harmonic information, and short windows in the high-frequency regions to capture transients with sharp temporal localization. The sliCQ Transform, or sliCQT, is a realtime implementation of the Nonstationary Gabor Transform (NSGT) of \textcite{balazs}. The NSGT is an invertible time-frequency transform that applies the Fourier Transform on windows of the input signal that can be varied by frequency region. An important application of the NSGT and sliCQT is to implement the Constant-Q Transform (CQT) \parencite{jbrown} for music analysis, which uses a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical instrument and its harmonics.
+The STFT is computed by applying the discrete Fourier Transform on fixed-size windows of the input signal. \textcite{doerflerphd} argues, based on auditory and musical considerations, that musical signals should be analyzed with long windows in the low-frequency regions to capture detailed harmonic information, and short windows in the high-frequency regions to capture transients with sharp temporal localization. The sliCQ Transform, or sliCQT, is a realtime implementation of the Nonstationary Gabor Transform (NSGT) of \textcite{balazs}. The NSGT is an invertible time-frequency transform that applies the Fourier Transform on windows of the input signal that can be varied by frequency region. An important application of the NSGT and sliCQT is to implement the Constant-Q Transform (CQT) \parencite{jbrown} for music analysis, which uses a logarithmic frequency scale to better show the relationship between the fundamental frequency of a musical sound and its harmonics.
 
 Machine learning models for music source separation have achieved recent success \parencite{sisec2018}, and the STFT is used by several of the top performers. Open-Unmix \parencite{umx} was released as a state-of-the-art baseline and reference implementation for music demixing based on the STFT and published as open-source software.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch}} In this thesis, Open-Unmix will be adapted to use the sliCQT in place of the STFT to investigate the viability of using the sliCQT for music demixing.
 
