Thesis stuff is happening-ish

--- a/latex/ch3.tex
+++ b/latex/ch3.tex
@@ -286,7 +286,7 @@ else:
  \subfloat{(c) Output printed by above for the ragged form}
  \vspace{1em}
  \end{minipage}
-  \captionof{listing}{Matrix and ragged forms of a sliCQT using 20-22,050 Hz on the Bark scale with 20 frequency bins}
+  \captionof{listing}{Matrix and ragged forms of a sliCQT using 20--22,050 Hz on the Bark scale with 20 frequency bins}
   \label{code:raggedvmatrix}
 \end{figure}
 
