--- a/latex/ch4.tex
+++ b/latex/ch4.tex
@@ -4,6 +4,8 @@
 \section{Experiment}
 \label{sec:experiment}
 
+This section contains the results of the experiments described in section \ref{sec:methodology}.
+
 The hardware and software specifications of the computer which produced the results in this section are as follows:
 \begin{tight_enumerate}
 	\item
@@ -46,10 +48,10 @@ The repositories associated with this thesis are as follows:
 		xumx-sliCQ neural network:\\
 		\url{https://github.com/sevagh/xumx-sliCQ}
 	\item
-		NSGT/sliCQT PyTorch fork:\\
+		NSGT/sliCQT PyTorch copy:\\
 		\url{https://github.com/sevagh/nsgt}
 	\item
-		museval (BSS metrics evaluation) CuPy fork:\\
+		museval (BSS metrics evaluation) CuPy copy:\\
 		\url{https://github.com/sevagh/sigsep-mus-eval}
 	\item
 		LaTeX files and scripts for generating this thesis, including all plots and results:\\
@@ -59,52 +61,19 @@ The repositories associated with this thesis are as follows:
 		\url{https://gitlab.aicrowd.com/sevagh/music-demixing-challenge-starter-kit}
 \end{tight_enumerate}
 
-The author of this thesis takes code availability and reproducibility seriously. Please contact me if you encounter any errors, discrepancies, or difficulties with reproducing any of the results:
-\begin{tight_enumerate}
-	\item
-		Academic e-mail: sevag.hanssian@mail.mcgill.ca
-	\item
-		Personal e-mail: sevagh+thesis@pm.me
-\end{tight_enumerate}
+The author of this thesis takes code availability and reproducibility seriously. Feel free to e-mail me\footnote{\href{mailto:sevag.hanssian@mail.mcgill.ca}{sevag.hanssian@mail.mcgill.ca}, \href{mailto:sevagh+thesis@pm.me}{sevagh+thesis@pm.me}} if you encounter any errors, discrepancies, or difficulties with reproducing any of the results.
 
 \subsection{Benchmarks for GPU accelerations}
 
-\subsubsection{Faster BSS metrics with CuPy}
+In section \ref{sec:torchslicq}, it was described that the sliCQT Python library uses the CPU-based NumPy library, and that it was necessary to port the code to the GPU-enabled PyTorch deep learning framework to allow it to run faster and directly on the GPU in the deep neural network of Open-Unmix.
 
-The first benchmark script is for the GPU-accelerated BSS metrics computation using the CuPy library from section \ref{sec:fasterbsscupy}. Recall that the forked copy of the library\footnote{\url{https://github.com/sevagh/sigsep-mus-eval}} contains the modifications made for this thesis. The benchmark script can be viewed here.\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/benchmark_cupy_eval.py}} For the 14 validation tracks of MUSDB18-HQ, it creates a random estimate (using \Verb#numpy.randn# to create an audio signal), and computes the BSS metrics. It measures the time for each BSS metric computation, summed across 14 tracks and repeated for 10 iterations. The final time is the total time for all 14 tracks, divided by 10 to account for the iterations. Three copies of the script were run; one with the argument \Verb#--disable-cupy# to use the CPU code with SciPy and NumPy functions on a Ryzen 5950X with 64GB RAM, one with the argument \Verb#--cuda-device=0# to use the NVIDIA RTX 3080 Ti GPU, and one with the argument \Verb#--cuda-device=1# to use the NVIDIA RTX 2070 Super GPU.
+In section \ref{sec:fasterbsscupy}, it was described that the BSS eval step was the slowest part of evaluating oracle performance, which is the important step in the sliCQT parameter selection. Replacing the CPU-based NumPy and SciPy libraries with the GPU-enabled CuPy library for math operations would speed up the oracle evaluations and allow the sliCQT parameter search script to run more efficiently.
 
-The results were that the regular BSS metrics evaluation on the CPU took 1,485.77 seconds, compared to the CuPy GPU-accelerated code which took 585.33 seconds with the 3080 Ti and 738.39 seconds with the weaker 2070 Super. The speedup from CuPy is \textasciitilde 2-2.5x over the Ryzen 5950X CPU. This is a significant reduction that can aid in future large-scale source separation evaluation campaigns like SiSec \parencite{sisec2016, sisec2018}. Also, note the passing regression test in Code Listing \ref{lst:regressionout}, showing that the library is working correctly with the speedup.
-
-\begin{listing}[h]
-  \centering
-\begin{minted}[numbersep=\mintednumbersep,linenos,mathescape=true,breaklines,frame=single,escapeinside=||,fontsize=\scriptsize]{text}
-(museval-cupy) sevagh:sigsep-mus-eval \$ py.test tests/test_regression.py -vs
-===================================================== test session starts =====================================================
-platform linux -- Python 3.9.6, pytest-6.2.4, py-1.10.0, pluggy-0.13.1 -- /home/sevagh/venvs/museval-cupy/bin/python
-cachedir: .pytest_cache
-rootdir: /home/sevagh/repos/sigsep-mus-eval, configfile: setup.cfg
-collected 4 items
-
-tests/test_regression.py::test_aggregate[Music Delta - 80s Rock]     time         target metric     score                   track
-[...]
-Aggrated Scores (median over frames, median over tracks)
-vocals          ==> SDR: -15.622  SIR:   9.165  ISR:  -8.476  SAR:  -7.327
-accompaniment   ==> SDR: -13.290  SIR: -18.765  ISR:  -0.322  SAR:  -7.427
-
-PASSED
-tests/test_regression.py::test_track_scores[Music Delta - 80s Rock] PASSED
-tests/test_regression.py::test_random_estimate[Music Delta - 80s Rock] PASSED
-tests/test_regression.py::test_one_estimate[Music Delta - 80s Rock] PASSED
-\end{minted}
-  \caption{Passing regression test output for the CuPy GPU speedup}
-  \label{lst:regressionout}
-\end{listing}
-
-\newpagefill
+The following sections show benchmark results to demonstrate the speedup of the sliCQT and BSS eval libraries achieved from their respective GPU ports.
 
 \subsubsection{Faster NSGT/sliCQT with PyTorch}
 
-The second benchmark script is for the PyTorch implementation of the NSGT/sliCQT library from section \ref{sec:torchslicq}. The forked copy of the library contains the PyTorch implementation,\footnote{\url{https://github.com/sevagh/nsgt}} and the benchmark scripts were added in the same repository.\footnote{\url{https://github.com/sevagh/nsgt/blob/main/examples/benchmark.py, https://github.com/sevagh/nsgt/blob/main/examples/run_bench.sh}} The benchmark does the forward and backward sliCQT using the Bark scale with 50 bins between 20--22,050 Hz. The sliCQT is taken on a 3:54 minute mixed song from the MUSDB18-HQ dataset, ``Zeno - Signs.'' The sliCQT parameters were chosen so that the transform of the song occupied a maximum of 7.2 GB of memory and could fit on the smallest memory device being benchmarked, the NVIDIA 2070 Super. The computation time was measured and averaged across 100 iterations. The cost of the memory transfer of the song to the GPU was not included in the measurement. Tables \ref{table:nsgttorchresultsmatrix} and \ref{table:nsgttorchresultsragged} show the benchmark results for the matrix and ragged sliCQT respectively.
+The first benchmark script is for the PyTorch implementation of the NSGT/sliCQT library from section \ref{sec:torchslicq}. My copy of the library contains the PyTorch implementation and the benchmark scripts.\footnote{\url{https://github.com/sevagh/nsgt}, \url{https://github.com/sevagh/nsgt/blob/main/examples/benchmark.py}, \url{https://github.com/sevagh/nsgt/blob/main/examples/run_bench.sh}} The benchmark performs the forward and backward sliCQT using the Bark scale with 50 bins between 20--22,050 Hz. The sliCQT is taken on a 3:54 minute mixed song from the MUSDB18-HQ dataset, ``Zeno - Signs.'' The sliCQT parameters were chosen so that the transform of the song occupied a maximum of 7.2 GB of memory and could fit on the device with the least memory, the NVIDIA 2070 Super. The computation time was measured and averaged across 100 iterations. The cost of the memory transfer of the song to the GPU was not included in the measurement. Tables \ref{table:nsgttorchresultsmatrix} and \ref{table:nsgttorchresultsragged} show the benchmark results for the matrix and ragged sliCQT respectively.
 
 \begin{table}[ht]
 	\centering
@@ -152,13 +121,21 @@ The second benchmark script is for the PyTorch implementation of the NSGT/sliCQT
 
 The execution time of the transform improved with PyTorch. The GPUs have an advantage over the CPU in the matrix form of the transform, but not in the ragged form. This can be explained by the fact that the ragged transform is a list of tensors. To perform operations on the ragged transform requires looping over the list which negates some of the benefits of GPU parallelism. Even though the GPU is not faster than the CPU for the tested parameters of ragged sliCQT, having the transform on the GPU allows us to use the sliCQT inside a PyTorch neural network. The original library has a multithreaded option which performs worse than the default single-threaded behavior, but the PyTorch CPU performance leapfrogs both.
 
+\subsubsection{Faster BSS metrics with CuPy}
+
+The second benchmark script is for the GPU-accelerated BSS metrics computation using the CuPy library from section \ref{sec:fasterbsscupy}. Recall that the copy of the library\footnote{\url{https://github.com/sevagh/sigsep-mus-eval}} contains the modifications made for this thesis. For the 14 validation tracks of MUSDB18-HQ, the benchmark script\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/benchmark_cupy_eval.py}}  creates a random estimate (using \Verb#numpy.randn# to create an audio signal) and computes the BSS metrics. It measures the time for each BSS metric computation, summed across 14 tracks and repeated for 10 iterations. The final time is the total time for all 14 tracks, divided by 10 to account for the iterations. Three copies of the script were run; one with the argument \Verb#--disable-cupy# to use the CPU code with SciPy and NumPy functions on a Ryzen 5950X with 64GB RAM, one with the argument \Verb#--cuda-device=0# to use the NVIDIA RTX 3080 Ti GPU, and one with the argument \Verb#--cuda-device=1# to use the NVIDIA RTX 2070 Super GPU.
+
+The results were that the regular BSS metrics evaluation on the CPU took 1,485.77 seconds, compared to the CuPy GPU-accelerated code which took 585.33 seconds with the 3080 Ti and 738.39 seconds with the weaker 2070 Super. The speedup from CuPy is \textasciitilde 2-2.5x over the Ryzen 5950X CPU. This is a significant reduction that can aid in future large-scale source separation evaluation campaigns like SiSec \parencite{sisec2016, sisec2018}.
+
 \newpagefill
 
 \subsection{Best sliCQT parameters with MPI oracle}
 
-The random hyperparameter search was done to maximize the median SDR score of the MPI oracle across all four targets for 60 iterations. The search script is available here,\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/scripts/slicq_explore.py}} and there is also some additional documentation related to the parameter search in the code repository.\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/docs/slicq_params.md}} The background and parameter range decisions for the search was discussed in \ref{sec:mpiparam}. For demonstration purposes, the inverse SDR score ($-1.0*\text{SDR}$) was maximized in a second search, to find a ``bad'' sliCQT. Repeating the parameter search yields slightly different sliCQT configurations due to the randomness, which is controlled by a script parameter for the random seed.
+As described in section \ref{sec:mpiparam}, a random parameter search was undertaken to choose the parameters of the sliCQT. The parameter search script\footnote{\url{https://github.com/sevagh/xumx-sliCQ/blob/main/scripts/slicq_explore.py}, \url{https://github.com/sevagh/xumx-sliCQ/blob/main/docs/slicq_params.md}} computes the median SDR score of the MPI oracle across all four targets and the 14 validation tracks of MUSDB18-HQ. The script ran for 60 iterations using random combinations of sliCQT parameters chosen from the ranges in section \ref{sec:mpiparam}.
 
-The sliCQT chosen by one run of the script that produced the best median SDR used 262 bins on the Bark scale between 32.9--22,050 Hz, called the ``good sliCQT.'' This is the sliCQT used in the final neural network, xumx-sliCQ. The sliCQT params chosen by the inverse SDR maximization which produced the worst median SDR, or the ``bad sliCQT,'' used 142 bins on the Constant-Q or logarithmic scale between 129.7--22,050 Hz. Figure \ref{fig:bipolarslicqs} shows the sliCQT magnitude spectrograms.
+For demonstration purposes, the inverse SDR score ($-1.0*\text{SDR}$) was maximized in a second search, to find sliCQT parameters with poor performance.
+
+The best-performing sliCQT parameters chosen by the script used the following parameters: Bark scale, 262 bins, 32.9--22,050 Hz. These parameters were used in the final neural network, xumx-sliCQ. The worst-performing sliCQT parameters chosen by the inverse SDR maximization used the following parameters: Constant-Q (logarithmic) scale, 142 bins, 129.7--22,050 Hz. Figure \ref{fig:bipolarslicqs} shows the magnitude spectrograms of the good and bad sliCQT.
 
 \begin{figure}[ht]
 	\centering
@@ -381,7 +358,7 @@ Recall from section \ref{sec:xumxinc} that X-UMX includes the cross-domain loss 
 \subsubsection{Music demixing results}
 \label{sec:demixresults}
 
-The BSSv4 scores for the demixing results, computed on the test set of the MUSDB18-HQ \parencite{musdb18hq} dataset, are shown in Figure \ref{fig:bssboxplot}. Table \ref{table:bsseval} contains the details of every model evaluated in the boxplot with their label, and the median SDR across the four targets and 50 test tracks. ``-WEM'' denotes ``Wiener-expectation-maximization,'' the post-processing iterative refinement step of the four targets. The evaluation script is stored here.\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/trained_models.py}}
+The BSSv4 scores for the demixing results generated from the evaluation script\footnote{\url{https://gitlab.com/sevagh/xumx_slicq_extra/-/blob/main/mss_evaluation/mss-oracle-experiments/oracle_eval/trained_models.py}} were computed on the test set of the MUSDB18-HQ \parencite{musdb18hq} dataset, and are shown in Figure \ref{fig:bssboxplot}. Table \ref{table:bsseval} contains the details of every model evaluated in the boxplot with their label, and the median SDR across the four targets and 50 test tracks. ``-WEM'' denotes ``Wiener-expectation-maximization,'' the post-processing iterative refinement step of the four targets.
 
 \begin{table}[ht]
 	\centering
