--- a/latex/report.tex
+++ b/latex/report.tex
@@ -5,6 +5,7 @@
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
 \usepackage{xfrac}
+\usepackage{todonotes}
 \usepackage{afterpage}
 \usepackage{amsmath}
 \usepackage[titletoc,title]{appendix}
