--- a/latex/report_ch2.tex
+++ b/latex/report_ch2.tex
@@ -10,6 +10,7 @@
 \usepackage[titletoc,title]{appendix}
 \usepackage{amssymb}
 \usepackage{makecell}
+\usepackage{todonotes}
 \usepackage{pdfpages}
 \usepackage{wrapfig}
 \usepackage{verbatim}
