--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -386,7 +386,7 @@ The NSGT coefficients for a signal of length $L$ are given by an FFT of length $
 
 We believe that the general NSGT is more interesting to study than the CQ-NSGT (Constant-Q NSGT), as it can be constructed with nonuniform frequency scales besides the Constant-Q scale, such as the psychoacoustic mel and Bark scales \parencite{melbook}, or the Variable-Q scale based on the psychoacoustic ERBlet transform \parencite{variableq1, variableq2}.
 
-Figures \ref{fig:bunchansgts1}, \ref{fig:bunchansgts2}, \ref{fig:bunchansgts3}, and \ref{fig:bunchansgts4} show different configurations of the NSGT of the glockenspiel signal, to demonstrate the diversity of the transform. The plots are generated from my fork\footnote{\url{https://github.com/sevagh/nsgt}} of the reference Python NSGT library. My modifications to the library will be described further in section \ref{sec:methodology}. A high and low frequency resolution NSGT, using 100 and 500 total frequency bins respectively, is generated for each of the following four frequency scales: mel, Bark, Constant-Q, and Variable-Q, using a frequency range of 20--22,050 Hz. For the Variable-Q scale, the fixed frequency offset applied is 15 Hz.  Details of the frequency scales used to generate the NSGT spectrograms are shown in Table \ref{table:nsgtfreqsandqs}.
+Figures \ref{fig:bunchansgts1} and \ref{fig:bunchansgts2} show different configurations of the NSGT of the glockenspiel signal, to demonstrate the diversity of the transform. The plots are generated from my copy\footnote{\url{https://github.com/sevagh/nsgt}} of the reference Python NSGT library. My modifications to the library will be described further in section \ref{sec:methodology}. A high and low frequency resolution NSGT, using 100 and 500 total frequency bins respectively, is generated for the Constant-Q/logarithmic scale for music, and the mel psychoacoustic scale, using a frequency range of 20--22,050 Hz. For the Variable-Q scale, the fixed frequency offset applied is 15 Hz.  Details of the frequency scales used to generate the NSGT spectrograms are shown in Table \ref{table:nsgtfreqsandqs}.
 
 \begin{figure}[ht]
 	\centering
@@ -398,26 +398,10 @@ Figures \ref{fig:bunchansgts1}, \ref{fig:bunchansgts2}, \ref{fig:bunchansgts3}, 
 
 \begin{figure}[ht]
 	\centering
-	\subfloat[NSGT, Variable-Q scale, 100 bins]{\includegraphics[width=0.675\textwidth]{./images-gspi/gspi_nsgt_vqlog_100.png}}\\
-	\subfloat[NSGT, Variable-Q scale, 500 bins]{\includegraphics[width=0.675\textwidth]{./images-gspi/gspi_nsgt_vqlog_500.png}}
-	\caption{Variable-Q NSGT spectrograms of the glockenspiel signal}
-	\label{fig:bunchansgts2}
-\end{figure}
-
-\begin{figure}[ht]
-	\centering
 	\subfloat[NSGT, mel scale, 100 bins]{\includegraphics[width=0.675\textwidth]{./images-gspi/gspi_nsgt_mel_100.png}}\\
 	\subfloat[NSGT, mel scale, 500 bins]{\includegraphics[width=0.675\textwidth]{./images-gspi/gspi_nsgt_mel_500.png}}
 	\caption{mel-scale NSGT spectrograms of the glockenspiel signal}
 	\label{fig:bunchansgts3}
-\end{figure}
-
-\begin{figure}[ht]
-	\centering
-	\subfloat[NSGT, Bark scale, 100 bins]{\includegraphics[width=0.675\textwidth]{./images-gspi/gspi_nsgt_bark_100.png}}\\
-	\subfloat[NSGT, Bark scale, 500 bins]{\includegraphics[width=0.675\textwidth]{./images-gspi/gspi_nsgt_bark_500.png}}
-	\caption{Bark-scale NSGT spectrograms of the glockenspiel signal}
-	\label{fig:bunchansgts4}
 \end{figure}
 
 \begin{table}[ht]
@@ -431,19 +415,11 @@ Figures \ref{fig:bunchansgts1}, \ref{fig:bunchansgts2}, \ref{fig:bunchansgts3}, 
 	 \hline
 	 Constant-Q & 100 & 20.00, 21.47, 23.04, 24.73, 26.54 \\
 	 \hline
-	 Variable-Q & 100 & 35.00, 36.47, 38.04, 39.73, 41.54 \\
-	 \hline
 	 mel & 100 & 20.00, 45.56, 72.02, 99.42, 127.80 \\
-	 \hline
-	 Bark & 100 & 20.00, 45.88, 71.85, 97.96, 124.24 \\
 	 \hline
 	 Constant-Q & 500 & 20.00, 20.28, 20.57, 20.86, 21.16 \\
 	 \hline
-	 Variable-Q & 500 & 35.00, 35.28, 35.57, 35.86, 36.16 \\
-	 \hline
 	 mel & 500 & 20.00, 25.00, 30.03, 35.10, 40.21 \\
-	 \hline
-	 Bark & 500 & 20.00, 25.13, 30.26, 35.40, 40.54 \\
 	 \hline
 \end{tabular}\\
 \vspace{1em}
@@ -454,19 +430,11 @@ Figures \ref{fig:bunchansgts1}, \ref{fig:bunchansgts2}, \ref{fig:bunchansgts3}, 
 	 \hline
 	 Constant-Q & 100 & 16,614.38, 17,832.63, 19,140.20, 20,543.64, 22,050.00 \\
 	 \hline
-	 Variable-Q & 100 & 16,629.38, 17,847.63, 19,155.20, 20,558.64, 22,065.00 \\
-	 \hline
 	 mel & 100 & 19,087.44, 19,789.79, 20,517.07, 21,270.17, 22,050.00 \\
-	 \hline
-	 Bark & 100 & 18,558.87, 19,376.12, 20,229.33, 21,120.07, 22,050.00 \\
 	 \hline
 	 Constant-Q & 500 & 20,845.91, 21,140.62, 21,439.50, 21,742.61, 22,050.00 \\
 	 \hline
-	 Variable-Q & 500 & 20,860.91, 21,155.62, 21,454.50, 21,757.61, 22,065.00 \\
-	 \hline
 	 mel & 500 & 21,428.92, 21,582.58, 21,737.31, 21,893.11, 22,050.00 \\
-	 \hline
-	 Bark & 500 & 21,308.75, 21,491.70, 21,676.21, 21,862.31, 22,050.00 \\
 	 \hline
 \end{tabular}\\
 \vspace{1em}
@@ -477,19 +445,11 @@ Figures \ref{fig:bunchansgts1}, \ref{fig:bunchansgts2}, \ref{fig:bunchansgts3}, 
 	 \hline
 	 Constant-Q & 100 & 7.06, 7.06, 7.06, 7.06, 7.06  \\
 	 \hline
-	 Variable-Q & 100 & 12.37, 12.00, 11.67, 11.35, 11.06 \\
-	 \hline
 	 mel & 100 & 0.40, 0.88, 1.34, 1.78, 2.21 \\
-	 \hline
-	 Bark & 100 & 0.39, 0.89, 1.38, 1.87, 2.35 \\
 	 \hline
 	 Constant-Q & 500 & 35.62, 35.62, 35.62, 35.62, 35.62 \\
 	 \hline
-	 Variable-Q & 500 & 62.33, 61.96, 61.59, 61.23, 60.87 \\
-	 \hline
 	 mel & 500 & 2.01, 2.49, 2.97, 3.45, 3.92 \\
-	 \hline
-	 Bark & 500 & 1.95, 2.45, 2.95, 3.45, 3.94 \\
 	 \hline
 \end{tabular}\\
 \vspace{1em}
@@ -500,19 +460,11 @@ Figures \ref{fig:bunchansgts1}, \ref{fig:bunchansgts2}, \ref{fig:bunchansgts3}, 
 	 \hline
 	 Constant-Q & 100 & 7.06, 7.06, 7.06, 7.06, 7.06  \\
 	 \hline
-	 Variable-Q & 100 & 7.07, 7.07, 7.07, 7.07, 7.07 \\
-	 \hline
 	 mel & 100 & 13.83, 13.85, 13.86, 13.88, 13.89 \\
-	 \hline
-	 Bark & 100 & 11.60, 11.60, 11.60, 11.60, 11.60 \\
 	 \hline
 	 Constant-Q & 500 & 35.62, 35.62, 35.62, 35.62, 35.62 \\
 	 \hline
-	 Variable-Q & 500 & 35.64, 35.64, 35.64, 35.64, 35.64 \\
-	 \hline
 	 mel & 500 & 69.97, 69.98, 70.00, 70.02, 70.03 \\
-	 \hline
-	 Bark & 500 & 58.49, 58.49, 58.49, 58.49, 58.49 \\
 	 \hline
 \end{tabular}
 \end{table}
@@ -1058,44 +1010,11 @@ To estimate the time domain waveform from an oracle mask, the complex STFT of th
 	\nonumber \hat{X}_{v\text{, IRM1}} &= X_{m} \cdot \text{IRM1}_{v}, \hat{x}_{v\text{, IRM1}} = \text{iSTFT}(\hat{X}_{v\text{, IRM1}})
 \end{align}
 
-\subsubsection{Open-Unmix (UMX) and CrossNet-Open-Unmix (X-UMX)}
-\label{sec:umx}
-
-Open-Unmix (UMX) was created by \textcite{umx} as an open-source, reference implementation of a state-of-the-art deep neural network for music source separation. Open-Unmix is based on STFT masking, and is intended to foster reproducible research by only using the open MUSDB18 dataset for training data \parencite{musdb18, musdb18hq}.
-
-In UMX, a deep neural network is used to estimate the magnitude spectrograms of the sources from an input mixed song. The architecture is a variant of a sequence2sequence model. Open-Unmix uses a bidirectional LSTM or Bi-LSTM architecture, which is based on two predecessor networks by \textcite{umxorig1} and \textcite{umxorig2}. Figure \ref{fig:umxes} shows the architecture of UMX and one of its predecessors.
-
-\begin{figure}[ht]
-	\centering
-	\subfloat[Open-Unmix Bi-LSTM architecture\protect\footnotemark]{\includegraphics[width=\textwidth]{./images-neural/umx.png}}\\
-	\subfloat[Simple DNN architecture for MSS {\parencite[262]{umxorig1}}]{\includegraphics[width=\textwidth]{./images-neural/typical_simple_mss_dnn.png}}
-	\caption{Architecture of Open-Unmix and one of its simpler predecessors}
-	\label{fig:umxes}
-\end{figure}
-
-\footnotetext{\url{https://github.com/sigsep/open-unmix-pytorch\#-the-model-for-one-source}}
-
-\textcite{xumx} combined the four separate target networks into a single model to apply the loss functions and optimizations jointly across all four targets, rather than optimizing each one separately. The model is named CrossNet-Open-Unmix (X-UMX). It also includes loss computed from the time-domain waveforms, in addition to the loss measured from the magnitude spectral coefficients.
-
-\subsubsection{Convolutional denoising autoencoders}
-
-While the discussed Open-Unmix model is based on sequence2sequence ideas with a bidirectional LSTM architecture, a different class of neural network called convolutional autoencoders, or convolutional denoising autoencoders (CDAE), have been seeing increasing use in music demixing \parencite{plumbley1, plumbley2}. The architectures are shown in Figure \ref{fig:cdaes}, where 2D convolutions (in the time and frequency dimensions) are applied on the magnitude STFT.
-
-\begin{figure}[ht]
-	\centering
-	\subfloat[Simple CDAE {\parencite[2]{plumbley1}}]{\includegraphics[width=\textwidth]{./images-neural/cdae_1.png}}\\
-	\subfloat[CDAE with time and frequency filters that vary by frequency band {\parencite[2]{plumbley2}}]{\includegraphics[width=0.8\textwidth]{./images-neural/cdae_2.png}}
-	\caption{Convolutional architectures for music source separation}
-	\label{fig:cdaes}
-\end{figure}
-
-We will note that each of the papers gives us different ideas with how to adapt STFT-based convolutional models to fit the sliCQT. The model introduced in \textcite{plumbley1} shows a simple case of a 2D time and frequency filter applied to the STFT, which can be applied to any time-frequency transform. The model introduced in \textcite{plumbley2} varies the size of time and frequency filter to fit the Constant-Q Transform, which as discussed in section \ref{sec:cqt} analyzes music with higher frequency resolution in the low frequency region, and higher time resolution in the high frequency region.
-
 \subsubsection{Public datasets}
 
 The most popular music stem dataset used by SISEC and SigSep is the MUSDB18 dataset \parencite{musdb18}, and more recently the HQ (high-quality) version \parencite{musdb18hq}. MUSDB18-HQ contains stereo wav files sampled at 44,100 Hz representing stems (drum, vocal, bass, and other) from a collection of permissively licensed music, specifically intended for recording, mastering, mixing (and in this case, ``de-mixing'', or source separation) research. It combines earlier mixing/demixing datasets \parencite{sisec2016, otherdataset2}.
 
-The songs in the MUSDB18-HQ dataset have a fixed train, validation, and test split. Following the rules defined in the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} for a network to be considered trained only on MUSDB18-HQ, the predefined data splits must be used.
+The songs in the MUSDB18-HQ dataset have a fixed train, validation, and test split.\todo{hardcoded to blah blah} Following the rules defined in the ISMIR 2021 Music Demixing Challenge,\footnote{\url{https://www.aicrowd.com/challenges/music-demixing-challenge-ismir-2021}} for a network to be considered trained only on MUSDB18-HQ, the predefined data splits must be used.
 
 \subsubsection{Evaluation measures}
 \label{sec:evalbss}
@@ -1128,6 +1047,158 @@ In the 2018 Signal Source Separation Evaluation Compaign (SiSEC), \textcite{sise
 
 \subsubsection{Open-source ecosystem}
 
-There are several groups of researchers who created open-source ecosystems on the code sharing platform GitHub to provide tools, tutorials, and implementations for source separation. In particular, the SigSep organization\footnote{\url{https://github.com/sigsep}} contains many tools useful for music demixing research, including the reference implementation of Open-Unmix \parencite{umx}, MUSDB18 dataset loaders \parencite{musdb18, musdb18hq}, and BSS evaluation metrics \parencite{bss, sisec2018}
+There are several groups of researchers who created open-source ecosystems on the code sharing platform GitHub to provide tools, tutorials, and implementations for source separation. In particular, the SigSep organization\footnote{\url{https://github.com/sigsep}} contains many tools useful for music demixing research, including the reference implementation of Open-Unmix \parencite{umx}, MUSDB18 dataset loaders \parencite{musdb18, musdb18hq}, and BSS evaluation metrics \parencite{bss, sisec2018}.
+
+\subsubsection{Open-Unmix (UMX)}
+\label{sec:umx}
+
+Open-Unmix (UMX) was created by \textcite{umx} as an open-source, reference implementation of a state-of-the-art deep neural network for music source separation. Open-Unmix is based on STFT masking, and is intended to foster reproducible research by only using the open MUSDB18 dataset for training data \parencite{musdb18, musdb18hq}.
+
+In UMX, a deep neural network is used to estimate the magnitude spectrograms of the sources from an input mixed song. The architecture is a variant of a sequence2sequence model. Open-Unmix uses a bidirectional LSTM or Bi-LSTM architecture, which is based on two predecessor networks by \textcite{umxorig1} and \textcite{umxorig2}. Figure \ref{fig:umxes} shows the architecture of UMX and one of its predecessors.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[Open-Unmix Bi-LSTM architecture\protect\footnotemark]{\includegraphics[width=\textwidth]{./images-neural/umx.png}}\\
+	\subfloat[Simple DNN architecture for MSS {\parencite[262]{umxorig1}}]{\includegraphics[width=\textwidth]{./images-neural/typical_simple_mss_dnn.png}}
+	\caption{Architecture of Open-Unmix and one of its simpler predecessors}
+	\label{fig:umxes}
+\end{figure}
+
+\footnotetext{\url{https://github.com/sigsep/open-unmix-pytorch\#-the-model-for-one-source}}
+
+The data loader of Open-Unmix returns a single target at a time, or an $(x, y)$ pair where $x$ is the mixed waveform and $y$ is the desired target. Also, the returned estimate of Open-Unmix is the estimated source waveform $\hat{y}$. However, during most of the steps between the loading of the time-domain waveforms and the return of the estimated time-domain waveform, the STFT is used to transform the audio into the time-frequency or spectral domain.
+
+The MUSDDB18-HQ data loader is the starting point of the neural network, and the important training and inference steps are as follows:
+
+\begin{tight_enumerate}
+	\item
+		The data loader is instantiated,\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L222}} ready to return $(x, y)$ pairs of waveforms for every training example.
+	\item
+		The \Verb#get_statistics#\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L56}} function is applied, which computes the mean and standard deviation from the magnitude STFTs of the entire training dataset. \citeauthor{Kessy_2018} describes data whitening as a process that ``greatly simplifies multivariate data analysis both from a computational and a statistical standpoint,'' and that ``whitening is a critically important tool, most often employed in preprocessing'' \parencite[309]{Kessy_2018}.
+	\item
+		The $(x, y)$ pairs have their magnitude STFT taken in the training loop.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L23}} The magnitude STFTs, denoted $(|X|, |Y|)$ are passed into the inner neural network. $|X|$ is modified with $|X| = \text{std}*(|X|+\text{mean})$, where the std and mean are from the data whitening step.
+	\item
+		The whitened $|X|$ is used as an input to the neural network layers, which as mentioned in section \ref{sec:umx} is a bi-directional LSTM.
+	\item
+		The estimate of the neural network is $|\hat{Y}|$. The loss function is $\text{MSE}(|Y|, |\hat{Y}|)$, and this is used as the optimization target for the parameter updates.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/scripts/train.py\#L34}}
+	\item
+		This process is repeated until the network is fully trained (i.e. the loss stops improving), and four independent networks are each trained on the four MUSDB18-HQ sources (vocals, drums, bass, other) respectively.
+	\item
+		The inference step of the neural network is when Open-Unmix loads all four independently trained networks to create time-domain estimates of the sources.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/model.py\#L258}}
+	\item
+		For a given mixed waveform $x$, Open-Unmix estimates $|Y_{1}|, |Y_{2}|, |Y_{3}|, |Y_{4}|$ for each source. Then, a process called Wiener filtering and expectation maximization is applied \parencite{umxorig1, wiener2, wiener3, wiener4}.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/filtering.py\#L338}} First the mix-phase inversion is used to come up with the first waveform estimate $y_{1}, y_{2}, y_{3}, y_{4}$. Then, the iterative Wiener expectation maximization process uses the four target STFT spectrograms in an iterative procedure to refine the estimates.\footnote{\url{https://github.com/sigsep/open-unmix-pytorch/blob/master/openunmix/filtering.py\#L154}}
+\end{tight_enumerate}
+
+Let us recap where the STFT is used in the above steps. The STFT is used to compute magnitude spectrogram statistics from the training data. The magnitude STFT of the training waveform $x$ is taken and passed as an input to the bi-directional LSTM. Then, the output estimated magnitude STFT from the four target models are considered together to perform an iterative Wiener-EM refinement step in the STFT domain. Finally, the estimates are transformed into time-domain waveforms with the iSTFT and the mix-phase inversion.
+
+
+\subsubsection{CrossNet-Open-Unmix (X-UMX)}
+\label{sec:xumx}
+
+\textcite{xumx} combined the four separate target networks into a single model to apply the loss functions and optimizations jointly across all four targets, rather than optimizing each one separately. The model is named CrossNet-Open-Unmix (X-UMX). It also includes loss computed from the time-domain waveforms, in addition to the loss measured from the magnitude spectral coefficients.
+
+CrossNet-Open-Unmix (X-UMX) \parencite{xumx} is a further development on Open-Unmix which improves the music demixing performance without adding any additional trainable parameters. All four target models are trained simultaneously instead of separately, which allows for loss functions that consider multiple targets. However, it requires more compute resources for training, since the GPU needs to store and train four independent target models simultaneously instead of separately.
+
+In Open-Unmix, the loss function is only for the single target being trained, and only applied by the mean squared error (MSE) function on the magnitude STFT coefficients, making it a loss of the frequency domain. The MSE loss of the magnitude STFT is computed from equation \eqref{equation:mselossstft}, where $Y$ represents the ground truth magnitude STFT, $\hat{Y}$ represents the network estimate, and there are $n$ total elements in the STFT matrix:
+\begin{align}\tag{31}\label{equation:mselossstft}
+	\nonumber & \text{MSE}(Y, \hat{Y}) = \frac{1}{n} \sum_{i = 1}^{n}{(Y_{i}-\hat{Y}_{i}^{2}})
+\end{align}
+
+The loss function of X-UMX is first modified to include a multi-domain loss (MDL), which refers to the existing frequency-domain loss (spectrogram MSE) in addition to a new time-domain loss. The time-domain loss is in fact the SDR score from the BSS metrics which we have seen before. Equations \eqref{equation:mpirepeat} show how the magnitude STFT of the Open-Unmix neural network is converted back to the time-domain waveform estimate for a target (or source):
+\begin{align}\tag{32}\label{equation:mpirepeat}
+	\nonumber & X_{\text{mix}} = \text{STFT}(x_{\text{mix}}[n])\\
+	\nonumber & |X_{\text{mix}}| = \text{abs}(X_{\text{mix}}), \measuredangle{X_{\text{mix}}} = \text{angle}(X_{\text{mix}})\\
+	\nonumber & {|X_{\text{source}}|}_{\text{est}} = \text{Open-Unmix}(x_{\text{mix}})\\
+	\nonumber & X_{\text{source, est}} = {|X_{\text{source}}|}_{\text{est}} \cdot \measuredangle{X_{\text{mix}}}\\
+	\nonumber & \hat{x}_{\text{source, est}}[n] = \text{iSTFT}(\hat{X}_{\text{source, est}})
+\end{align}
+
+Similar equations were previously described for the mix-phase inversion (MPI) oracle in section \ref{sec:mpi}.
+
+We can use these equations in the loss function to convert from the estimated magnitude spectrogram of the neural network to the waveform estimate. In xumx-sliCQ, we use the auraloss Python package,\footnote{\url{https://github.com/csteinmetz1/auraloss}} which implements the SI-SDR (scale-invariant SDR) \parencite{roux2018sdr} loss function for time-domain audio waveforms. SI-SDR is a simpler and more robust variant of SDR which improves on some failure cases of SDR \parencite{roux2018sdr}.
+
+We will call this one $\text{sdr\_loss}$ to denote time-domain loss which is applied to waveforms $x$ and $\hat{x}$ (the ground-truth and estimated waveform respectively). The SI-SDR loss is shown in equation \eqref{equation:sisdr}:
+\begin{align}
+	& \text{SI-SDR}(x, \hat{x}) = 10 \log_{10}\Big(\frac{||\frac{\hat{x}^{T}x}{||x||^{2}} x||^{2}}{||\frac{\hat{x}^{T}x}{||x||^{2}} x - \hat{x}||^{2}}\Big)\tag{33}\label{equation:sisdr}
+\end{align}
+
+There are 14 MSE loss combinations made from the four targets to implement the combination loss (CL). In the spectral/frequency domain, we will use $\text{mse\_loss}$ as shorthand for frequency-domain loss. Equations \eqref{equation:cl} show the computation of the total frequency-domain loss, where $x$ represents the time-domain waveform, the subscript represents the target (1--4 for vocals, drums, bass, and other):
+\begin{align}\tag{34}\label{equation:cl}
+	\nonumber & \text{mse\_loss}_{1} = \text{MSE}(|\text{STFT}(\hat{x}_{1})|, |\text{STFT}(x_{1})|)\\
+	\nonumber & \text{mse\_loss}_{2} = \text{MSE}(|\text{STFT}(\hat{x}_{1} + \hat{x}_{2})|, |\text{STFT}(x_{1} + x_{2})|)\\
+	\nonumber & \text{(... repeat for 14 combinations)}\\
+	\nonumber & \text{mse\_loss}_{\text{total}} = \frac{1}{14} \cdot \sum_{n = 1}^{14}{\text{mse\_loss}_{n}}
+\end{align}
+
+For the time-domain loss, the same 14 combinations of the combination targets are considered, shown in the equations \eqref{equation:mdl}, where $x$ represents the time-domain waveform, the subscript represents the target:
+\begin{align}\tag{35}\label{equation:mdl}
+	\nonumber & \text{sdr\_loss}_{1} = \text{SI-SDR}(\hat{x}_{1}, x_{1})\\
+	\nonumber & \text{sdr\_loss}_{2} = \text{SI-SDR}(\hat{x}_{1} + \hat{x}_{2}, x_{1} + x_{2})\\
+	\nonumber & \text{(... repeat for 14 combinations)}\\
+	\nonumber & \text{sdr\_loss}_{\text{total}} = \frac{1}{14} \cdot \sum_{n = 1}^{14}{\text{sdr\_loss}_{n}}
+\end{align}
+
+As a last step, the time-domain loss is multiplied by a mixing coefficient, $\alpha$, before adding it to the frequency-domain loss to create the total loss function in equation \eqref{equation:totalloss}:
+\begin{align}\tag{36}\label{equation:totalloss}
+	\nonumber & \text{loss}_{X-UMX} = \text{mse\_loss}_{\text{total}} + \alpha \cdot \text{sdr\_loss}_{\text{total}}
+\end{align}
+
+A visualization of the multi-domain loss (MDL) and combination loss (CL) for four targets is shown in Figure \ref{fig:xumxlosses}.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[Multi-domain loss (MDL)]{\includegraphics[width=\textwidth]{./images-neural/xumx1.png}}\\
+	\subfloat[Combination loss (CL)]{\includegraphics[width=\textwidth]{./images-neural/xumx2.png}}
+	\caption{Loss functions of X-UMX \parencite[2]{xumx}}
+	\label{fig:xumxlosses}
+\end{figure}
+
+\subsubsection{Convolutional denoising autoencoder (CDAE)}
+
+While the discussed Open-Unmix model is based on sequence2sequence ideas with a bidirectional LSTM architecture, a different class of neural network called convolutional autoencoders, or convolutional denoising autoencoders (CDAE), have been seeing increasing use in music demixing \parencite{plumbley1, plumbley2}. The architectures are shown in Figure \ref{fig:cdaes}, where 2D convolutions (in the time and frequency dimensions) are applied on the magnitude STFT.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[Simple CDAE {\parencite[2]{plumbley1}}]{\includegraphics[width=\textwidth]{./images-neural/cdae_1.png}}\\
+	\subfloat[CDAE with time and frequency filters that vary by frequency band {\parencite[2]{plumbley2}}]{\includegraphics[width=0.8\textwidth]{./images-neural/cdae_2.png}}
+	\caption{Convolutional architectures for music source separation}
+	\label{fig:cdaes}
+\end{figure}
+
+CDAEs are symmetric: a stack of convolutional layers in the encoder are applied to the input spectrogram to extract spectral audio features with sliding 2D (frequency filter, time filter) kernels. The corresponding reverse stack of transpose convolution (or deconvolution) layer in the decoder use the same size of filter (in reverse order) to grow the feature map back to the original spectrogram. For example, a 2-layer encoder/decoder might consist of the following layers: $\text{Conv}(11,42) \rightarrow \text{Conv}(3,5) \rightarrow \text{ConvTranspose}(3,5) \rightarrow \text{ConvTranspose}(11,42)$. Figure \ref{fig:convtranspose} shows how a convolutional and transpose convolutional or deconvolutional layer apply inverse operations.
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.8\textwidth]{./images-neural/convtranspose.png}
+	\caption{Deconvolution operation \parencite[11]{convtranspose}}
+	\label{fig:convtranspose}
+\end{figure}
+
+To describe convolutional layers, \citeauthor{convguide} state that ``images, sound clips and many other similar kinds of data have an intrinsic structure,'' and share the following properties \parencite[6]{convguide}:
+
+\begin{tight_enumerate}
+	\item
+		They are stored as multi-dimensional arrays (e.g. the STFT or sliCQT)
+	\item
+		They feature one or more axes for which ordering matters (e.g., time and frequency for a spectrogram)
+	\item
+		The channel axis is used to access different views of the data (e.g., the left and right channels of a stereo audio track)
+\end{tight_enumerate}
+
+The STFT and sliCQT of stereo (2-channel) music produce a 2-channel spectrogram, such that the total dimensions of the 2D time-frequency spectrogram are $\text{time} \times \text{frequency} \times \text{channel}$. The 2D convolution kernels slide across the spectrograms to learn a feature representation, and the number of output channels determines how many feature maps are created. Using the values from \textcite{plumbley2}, the two layers of convolution in the CDAE of xumx-sliCQ use 25 and 55 channels respectively. This means that the stereo or 2-channel sliCQT has 25 output feature maps (or channels) computed from the first encoder convolutional layer, and 55 output feature maps from the second encoder convolutional layer. These are reversed in the decoder layer i.e., $2 \rightarrow \text{encoder}(25 \rightarrow 55) \rightarrow \text{decoder}(25 \rightarrow 2)$.
+
+The kernel parameters define the size and movement of the 2D convolution kernel in the time and frequency dimensions in each output channel. Besides the kernel size, the kernel has these additional parameters: stride, dilation, and padding \parencite{convguide}. Figure \ref{fig:convdiags} shows the behavior of these different kernel parameters. The stride is the amount by which the kernel moves; a stride larger than one implies \textit{subsampling}, because it dictates how much of the output is retained \parencite{convguide}. The dilation defines ``holes'' or gaps in the kernel to increase the receptive field \parencite{convguide}, which is a cheap way to increase the amount of data points considered in a feature map. The padding defines zeros concatenated to the beginning and end of an axis.
+
+\begin{figure}[ht]
+	\centering
+	\subfloat[2D convolution kernel]{\includegraphics[width=\textwidth]{./images-neural/conv1.png}}\\
+	\subfloat[2D convolution kernel with padding > 0]{\includegraphics[width=\textwidth]{./images-neural/conv2.png}}\\
+	\subfloat[2D convolution kernel with stride > 1]{\includegraphics[width=\textwidth]{./images-neural/conv3.png}}\\
+	\subfloat[2D convolution kernel with dilation > 1]{\includegraphics[width=\textwidth]{./images-neural/conv4.png}}
+	\caption{Different behaviors of kernel parameters \parencite[14, 29]{convguide}}
+	\label{fig:convdiags}
+\end{figure}
+
+We will note that each of the papers gives us different ideas with how to adapt STFT-based convolutional models to fit the sliCQT. The model introduced in \textcite{plumbley1} shows a simple case of a 2D time and frequency filter applied to the STFT, which can be applied to any time-frequency transform. The model introduced in \textcite{plumbley2} varies the size of time and frequency filter to fit the Constant-Q Transform, which as discussed in section \ref{sec:cqt} analyzes music with higher frequency resolution in the low frequency region, and higher time resolution in the high frequency region.
 
 \end{document}
