--- a/latex/report_ch4.tex
+++ b/latex/report_ch4.tex
@@ -11,6 +11,7 @@
 \usepackage{amssymb}
 \usepackage{makecell}
 \usepackage{pdfpages}
+\usepackage{todonotes}
 \usepackage{wrapfig}
 \usepackage{verbatim}
 \usepackage{listings}
